--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'org.flywaydb.flyway' version '9.2.3'
 }
 
 group = 'org.example'
@@ -12,10 +13,15 @@ repositories {
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
-    implementation 'com.h2database:h2:1.4.200'
+    implementation group: 'org.postgresql', name: 'postgresql', version: '42.5.0'
+    implementation 'org.flywaydb:flyway-core:9.2.3'
+    implementation 'com.zaxxer:HikariCP:5.0.1'
+
+
 
 
 }
+
 
 test {
     useJUnitPlatform()
